2000-05-01  Martin Mares  <mj@albireo.ucw.cz>

	* pci.ids: Updated Contemporary Control ARCnet card entries.

	* pci.ids: Synchronized class list with latest PCI SIG documents.

2000-04-29  Martin Mares  <mj@albireo.ucw.cz>

	* lib/names.c (pci_lookup_name): Fixed the cheat.

	* lib/internal.h: Moved UNUSED/inline hacks above all other declarations.

	* pci.ids: Various ID updates.

2000-04-21  Martin Mares  <mj@albireo.ucw.cz>

	* Released as 2.1.7.

	* pciutils.spec: Added German description.

	* lib/names.c (pci_lookup_name): Added a cheat for case that subsystem ID's
	are the same as device ID and just output subsystem name according to
	device name.

	* lib/proc.c: Use UNUSED instead of __attribute__((unused)).

	* lib/pci.h: Added the correct typedefs for AIX.

	* lib/generic.c (pci_generic_scan_bus): Export.

	* lib/configure: Detect AIX. Use "echo '...\c'" instead of
	"echo -n" if the shell isn't bash.

	* lspci.c: Avoid using alloca() if not compiled by GCC.
	(insert_dev): Avoid returning a void value.

	* Makefile: Choose which install utility to use according to
	OS type. Also use `-o' instead of `-or' in find arguments.
	Part of the AIX port.

	* lib/aix-device.c: Added AIX low-level interface. Contributed
	by Dave Johnson <ddj@brown.edu>, thanks a lot!

	* pci.ids: Few new ID's.

	* pciutils.h, lib/internal.h: Redefine __attribute__ and inline
	when not compiled by GCC.

2000-04-17  Martin Mares  <mj@albireo.ucw.cz>

	* Released as 2.1.6.

	* pci.ids: Added a large batch of ID's contributed by Gunther
	Mayer <gunther.mayer@braunschweig.netsurf.de> and synced the
	list with the 2.3.99pre6 kernel.

Thu Mar  9 13:11:39 2000  Martin Mares  <mj@albireo.ucw.cz>

	* lib/example.c: Added a simple example of how to use
	the library.

	* lspci.man, setpci.man: Revealed --version. Well spotted
	by Adam Sulmicki.

	* pci.ids: Added lots of new ID's and synced with 2.3.50.

Tue Feb 15 00:16:21 2000  Martin Mares  <mj@albireo.ucw.cz>

	* Released as 2.1.5.
